fixed up the contact page overlapping components by adjusting z index to have header in the back

--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,10 @@
   background-image: url('../public/images/rainbowbanner.jpg');
 }*/
 
+.contactvid {
+  z-index: -1;
+}
+
 .contact {
   background-position: center;
   background-size: cover;
