--- a/src/components/ContactForm.css
+++ b/src/components/ContactForm.css
@@ -1,14 +1,17 @@
 .form-wrapper {
     display: flex;
-    flex-direction: left;
-    justify-content: space-around;
+    flex-direction: center;
+    justify-content: space-evenly;
     align-items: center;
-}
-
-.form-item {
-    display: flex;
+    background: linear-gradient(90deg, rgb(0, 224, 206) 0%, rgb(0, 129, 108) 100%);
+    width: 100%;
+    padding: 20px;
 }
 
 span {
-    display: block;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    align-items: center;
 }
